# valentine

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
front/app/: index.html
sql/: create_db.sql
src/: main.rs
src/engine/: authorization_engine.rs  config_engine.rs  log_engine.rs  mod.rs  password_engine.rs  response_engine.rs  session_engine.rs  utils.rs  uuid_engine.rs
src/resource/account/: controller.rs  mod.rs  model.rs  rule_set.rs
