[package]
name = "valentine"
version = "0.1.0"
authors = ["s18alg <s18alg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
r2d2 = "0.8.6"
r2d2_postgres = "0.14.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.6"
rand = "0.7.2"
plugin = "0.2.6"
typemap = "0.3.3"
jwt = "*"
rust-crypto = "*"
chrono = "0.4"

[dependencies.nickel_postgres]
git = "https://github.com/nickel-org/nickel-postgres.git"